--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -104,49 +104,116 @@ jobs:
       use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a14-5-15:
-    if: contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14')
-    uses: ./.github/workflows/kernel-a14-5.15.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
-
-  build-kernel-a14-6-1:
-    if: contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1')
-    uses: ./.github/workflows/kernel-a14-6.1.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
-
-  build-kernel-a15-6-6:
-    if: contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6')
-    uses: ./.github/workflows/kernel-a15-6.6.yml
-    secrets: inherit
-    with:
-      make_release: ${{ inputs.make_release }}
-      kernelsu_variant: ${{ inputs.kernelsu_variant }}
-      kernelsu_branch: ${{ inputs.kernelsu_branch }}
-      version: ${{ inputs.version }}
-      use_zram: ${{ inputs.use_zram }}
-      use_kpm: ${{ inputs.use_kpm }}
-
-  check-build-status:
-    runs-on: ubuntu-latest
-    needs:
-      - get_manager
-      - build-kernel-a12-5-10
-      - build-kernel-a13-5-10
-      - build-kernel-a13-5-15
-      - build-kernel-a14-5-15
+    if: contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to极客江湖
+      - build-kernel-a14-6-1
+      - build-kernel-a15-6-6
+    if: always()
+    outputs:
+      should_release: ${{ steps.check.outputs.should_release }}
+    env:
+      SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
+      SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
+      SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
+      SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
+      SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
+      SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, '极客江湖
+      - build-kernel-a14-6-1
+      - build-kernel-a15-6-6
+    if: always()
+    outputs:
+      should_release: ${{ steps.check.outputs.should_release }}
+    env:
+      SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
+      SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
+      SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
+      SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
+      SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
+      SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6') }}
+      
+      RESULT_GET_MANAGER: ${{ needs.get_manager.result }}
+      RESULT_A12_5_10: ${{ needs.build-kernel-a12-5-10.result }}
+      RESULT_A13_5_10: ${{ needs.build-kernel-a13-5-10.result }}
+      RESULT_A13_5_15: ${{ needs.build-kernel-a13-5-15.result }}
+      RESULT_A14_5_15: ${{ needs.build-kernel-a14-5-15.result }}
+      RESULT_A14_6_1: ${{ needs.build-kernel-a14-6-1.result }}
+      RESULT_A15_6_极客江湖
+      - build-kernel-a14-6-1
+      - build-kernel-a15-6-6
+    if: always()
+    outputs:
+      should_release: ${{ steps.check.outputs.should_release }}
+    env:
+      SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
+      SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
+      SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
+      SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
+      SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
+      SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6') }}
+      
+      RESULT_GET_MANAGER: ${{ needs.get_manager.result }}
+      RESULT_A12_5_10: ${{ needs.build-kernel-a12-5-10.result }}
+      RESULT_A13_5_10: ${{ needs.build-kernel-a13-5-10.result }}
+      RES极客江湖
+      - build-kernel-a14-6-1
+      - build-kernel-a15-6-6
+    if: always()
+    outputs:
+      should_release: ${{ steps.check.outputs.should_release }}
+    env:
+      SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
+      SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
+      SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
+      SHOULD_RUN_A14_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14-5.15') || contains(github.event.inputs.kernels_to_build, 'a14') }}
+      SHOULD_RUN_A14_6_1: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a14') || contains(github.event.inputs.kernels_to_build, 'a14-6.1') }}
+      SHOULD_RUN_A15_6_6: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a15') || contains(github.event.inputs.kernels_to_build, 'a15-6.6') }}
+      
+      RESULT_GET_MANAGER: ${{ needs.get_manager.result }}
+      RESULT_A12_5_10: ${{ needs.build-kernel-a12-5-10.result }}
+      RESULT_A13_5_10: ${{ needs.build-kernel-a13-5-10.result }}
+      RESULT_A13_5_15: ${{ needs.build-kernel-a13-5-15.result }}
+      RESULT_A14_5_15: ${{ needs.build-kernel-a14-5-15.result }}
+      RESULT_A14_6_1: ${{ needs.build-kernel-a14-6-1.result }}
+      RESULT_A15_6_6: ${{ needs.build-kernel-a15-6-6.result }}
+    steps:
+      - name: Determine if release should proceed
+        id: check
+        run: |
+          SHOULD_PROCEED="true"
+          ERROR_MESSAGE=""
+          
+          echo "--- Checking Job Statuses ---"
+          echo "get_manager result: $RESULT_GET_MANAGER"
+          
+          # 1. Check get_manager job only if it was supposed to run
+          if [[ "${{ inputs.get_manager }}" == "true" ]]; then
+            if [[ "$RESULT_GET_MANAGER" != "success" ]]; then
+              SHOULD_PROCEED="false"
+              ERROR_MESSAGE+="get_manager job did not succeed (result: $RESULT_GET_MANAGER). "
+            fi
+          fi
+          
+          # Function to check a kernel job
+          check_kernel_job() {
+            local kernel_id=$1
+            local should_run_flag=$2
+            local actual_result=$3
+            
+            echo "Checking kernel $kernel_id (Should Run: $should_run_flag, Actual Result: $actual_result)..."
+            
+            if [[ "$should_run_flag" == "true" ]]; then
+              if [[ "$actual_result" != "success" ]]; then
+                SHOULD_PROCEED="false"
+                ERROR_MESSAGE+="Job for $kernel_id was expected to run but did not succeed (result: $actual_result). "
+              fi
+            else
+              if [[ "$actual_result" == "failure" ]]; then
+                SHOULD_PROCEED="false"
+                ERROR_MESSAGE+="Job for $kernel_id was NOT expected to run but failed (result: $actual_result). This indicates a problem. "
+              fi
+            fi
+          }
+          
+          check_kernel_job "a12-5.10" "$SHOULD_R极客江湖
       - build-kernel-a14-6-1
       - build-kernel-a15-6-6
     if: always()
@@ -274,132 +341,7 @@ jobs:
         run: |
           KSU_BRANCH=""
           if [[ "${{ inputs.kernelsu_branch }}" == "Dev(开发)" || "${{ inputs.kernelsu_variant }}" == "MKSU" || "${{ inputs.kernelsu_variant }}" == "SukiSU" ]]; then
-            if [[ "${{ inputs.kernelsu_variant }}" == "Official" || "${{ inputs.kernelsu_variant }}" == "MKSU" || "${{ inputs.kernelsu_variant }}" == "SukiSU" ]]; then
-              KSU_BRANCH="main"
-            elif [[ "${{ inputs.kernelsu_variant }}" == "Next" ]]; then
-              KSU_BRANCH="next"
-            fi
-          fi
-          
-          echo "KSU_BRANCH=$KSU_BRANCH" >> $GITHUB_ENV
-          
-          KSU_REPO_URL=""
-          KSU_REPO_URL2=""
-          if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
-            KSU_REPO_URL="https://github.com/tiann/KernelSU.git"
-            KSU_REPO_URL2="tiann/KernelSU"
-          elif [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
-            KSU_REPO_URL="https://github.com/KernelSU-Next/KernelSU-Next.git"
-            KSU_REPO_URL2="KernelSU-Next/KernelSU-Next"
-          elif [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
-            KSU_REPO_URL="https://github.com/5ec1cff/KernelSU.git"
-            KSU_REPO_URL2="5ec1cff/KernelSU"
-          elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
-            KSU_REPO_URL="https://github.com/ShirkNeko/KernelSU.git"
-            KSU_REPO_URL2="ShirkNeko/KernelSU"
-          else
-            echo "Warning: Unknown KernelSU variant selected. Defaulting to Official for URL generation."
-            KSU_REPO_URL="https://github.com/tiann/KernelSU.git"
-            KSU_REPO_URL2="tiann/KernelSU"
-          fi
-          
-          KSU_REF=""
-          KSU_URL=""
-          if [[ "${{ inputs.kernelsu_branch }}" == "Stable(标准)" && "${{ inputs.kernelsu_variant }}" != "MKSU" ]]; then
-            TAG=$(git ls-remote --tags --sort=-v:refname "$KSU_REPO_URL" | grep -o 'refs/tags/.*' | cut -d'/' -f3 | head -n1)
-            KSU_REF="${TAG:-UNKNOWN_TAG}"
-            KSU_URL="https://github.com/$KSU_REPO_URL2/releases/tag/$KSU_REF"
-          elif [[ -n "$KSU_BRANCH" ]]; then
-            COMMIT_HASH=$(git ls-remote "$KSU_REPO_URL" "refs/heads/$KSU_BRANCH" | awk '{ print $1 }')
-            KSU_REF="${COMMIT_HASH:-UNKNOWN_COMMIT}"
-            KSU_URL="https://github.com/$KSU_REPO_URL2/commit/$KSU_REF"
-          else
-            echo "Error: KSU branch could not be determined. KSU commit information will be incomplete." >&2
-          fi
-          
-          FINAL_RELEASE_NOTES="${{ env.INITIAL_RELEASE_NOTES }}"
-          
-          if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
-            FINAL_RELEASE_NOTES+="\nOfficial Manager:\n-> https://github.com/tiann/KernelSU"
-          elif [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
-            FINAL_RELEASE_NOTES+="\nNext Manager:\n-> https://github.com/KernelSU-Next/KernelSU-Next"
-          elif [ "${{ inputs.kernelsu_variant }}" == "MKSU" ]; then
-            FINAL_RELEASE_NOTES+="\nMKSU Manager:\n-> https://github.com/5ec1cff/KernelSU"
-          elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
-            FINAL_RELEASE_NOTES+="\nSukiSU Manager:\n-> https://github.com/ShirkNeko/SukiSU-Ultra"
-          fi
-          
-          FINAL_RELEASE_NOTES+="\n\nLTO: thin"
-          FINAL_RELEASE_NOTES+="\n\n<details>"
-          FINAL_RELEASE_NOTES+="\n<summary>Commit Information</summary>"
-          FINAL_RELEASE_NOTES+="\n\nCommit hashes and links (the following commits refer to the progress of KSU or SUSFS at the time of this compilation):"
-          FINAL_RELEASE_NOTES+="\n- **KernelSU is ${{ inputs.kernelsu_variant }}-${KSU_BRANCH}** (Commit): [${KSU_REF}](${KSU_URL})"
-          FINAL_RELEASE_NOTES+="\n- **SUSFS4KSU** (Commit):"
-          
-          GITLAB_OWNER="simonpunk"
-          GITLAB_REPO="susfs4ksu"
-          
-          declare -A BRANCH_MAP=(
-            ["a12-5.10"]="gki-android12-5.10"
-            ["a13-5.10"]="gki-android13-5.10"
-            ["a13-5.15"]="gki-android13-5.15"
-            ["a14-5.15"]="gki-android14-5.15"
-            ["a14-6.1"]="gki-android14-6.1"
-            ["a15-6.6"]="gki-android15-6.6"
-          )
-          
-          declare -a KERNELS_TO_FETCH_SUSFS
-          if [[ "${{ inputs.kernels_to_build }}" == "all" ]]; then
-            for key in "${!BRANCH_MAP[@]}"; do
-              KERNELS_TO_FETCH_SUSFS+=("$key")
-            done
-          else
-            IFS=',' read -r -a INPUT_KERNELS <<< "${{ inputs.kernels_to_build }}"
-            for kernel_input in "${INPUT_KERNELS[@]}"; do
-              case "$kernel_input" in
-                "a12")
-                  KERNELS_TO_FETCH_SUSFS+=("a12-5.10")
-                  ;;
-                "a13")
-                  KERNELS_TO_FETCH_SUSFS+=("a13-5.10" "a13-5.15")
-                  ;;
-                "a14")
-                  KERNELS_TO_FETCH_SUSFS+=("a14-5.15" "a14-6.1")
-                  ;;
-                "a15")
-                  KERNELS_TO_FETCH_SUSFS+=("a15-6.6")
-                  ;;
-                *)
-                  if [[ -n "${BRANCH_MAP[$kernel_input]}" ]]; then
-                    KERNELS_TO_FETCH_SUSFS+=("$kernel_input")
-                  else
-                    echo "Warning: Input kernel '$kernel_input' does not have a defined SUSFS branch mapping. Skipping." >&2
-                  fi
-                  ;;
-              esac
-            done
-            KERNELS_TO_FETCH_SUSFS=( $(printf "%s\n" "${KERNELS_TO_FETCH_SUSFS[@]}" | sort -u) )
-          fi
-          
-          for kernel_id in "${KERNELS_TO_FETCH_SUSFS[@]}"; do
-            susfs_branch_name="${BRANCH_MAP[$kernel_id]}"
-            if [[ -n "$susfs_branch_name" ]]; then
-              SUSFS_COMMIT_HASH=$(git ls-remote "https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO.git" "refs/heads/$susfs_branch_name" | awk '{ print $1 }')
-              SUSFS_COMMIT_HASH="${SUSFS_COMMIT_HASH:-UNKNOWN_COMMIT}"
-              SUSFS_COMMIT_URL="https://gitlab.com/$GITLAB_OWNER/$GITLAB_REPO/-/commit/$SUSFS_COMMIT_HASH"
-              FINAL_RELEASE_NOTES+="\n - ${kernel_id}: [${SUSFS_COMMIT_HASH}](${SUSFS_COMMIT_URL})"
-            else
-              echo "Warning: SUSFS branch name not found for kernel ID: $kernel_id. Cannot fetch commit info." >&2
-            fi
-          done
-          
-          FINAL_RELEASE_NOTES+="\n\n</details>"
-          
-          echo "FULL_RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-          echo -e "$FINAL_RELEASE_NOTES" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-          
-      # Install GitHub CLI only (authentication is automatic via GITHUB_TOKEN)
+            if [[ "${{ inputs.kernelsu_variant }}" == "Official" || "${{ inputs.kern极客江湖
       - name: Install GitHub CLI
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
@@ -443,17 +385,15 @@ jobs:
           echo "New tag generated: $NEW_TAG"
           echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
           
-          # Create and push tag
-          git tag "$NEW_TAG"
-          git push origin "$NEW_TAG"
-          
+          # Create and push tag only if it doesn't exist
+          if ! git rev-parse "$NEW_TAG" >/dev/null 2>&1; then
+            git tag "$NEW极客江湖
       - name: Download Artifacts
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/download-artifact@v4
         with:
           path: ./downloaded-artifacts
           
-      # Prepare artifacts for upload
       - name: Prepare Artifacts for Upload
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
@@ -497,15 +437,27 @@ jobs:
           
           echo "RELEASE_NAME=${{ env.RELEASE_NAME }}${KSU_VERSION_SUFFIX} & SUSFS v1.5.8" >> $GITHUB_ENV
           
-      - name: Create GitHub Release
+      - name: Create or Update GitHub Release
         if: ${{ steps.release_check.outcome == 'success' }}
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ env.NEW_TAG }}
-          prerelease: true
-          release_name: ${{ env.RELEASE_NAME }}
-          body: ${{ env.FULL_RELEASE_NOTES }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Check if release already exists
+          if gh release view "${{ env.NEW_TAG }}" >/dev/null 2>&1; then
+            echo "Release ${{ env.NEW_TAG }} already exists. Updating release notes and title."
+            
+            # Update existing release
+            gh release edit "${{ env.NEW_TAG }}" \
+              --title "${{ env.RELEASE_NAME }}" \
+              --notes "${{ env.FULL_RELEASE_NOTES }}" \
+              --prerelease
+          else
+            echo "Creating new release ${{ env.NEW_TAG }}"
+            gh release create "${{ env.NEW_TAG }}" \
+              --title "${{ env.RELEASE_NAME }}" \
+              --notes "${{ env.FULL_RELEASE_NOTES }}" \
+              --prerelease
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Dynamically Upload Release Assets
         if: ${{ steps.release_check.outcome == 'success' }}
