--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -2,7 +2,11 @@ name: Test Release
 
 permissions:
   contents: write
-  actions: write
+  actions: read
+
+concurrency:
+  group: release-${{ github.ref }}
+  cancel-in-progress: true
 
 on:
   workflow_dispatch:
@@ -226,7 +230,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      actions: write
     needs:
       - check-build-status
       - get_manager
@@ -266,18 +269,119 @@ jobs:
         
       - name: Checkout code
         if: ${{ steps.release_check.outcome == 'success' }}
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         
+      - name: Install GitHub CLI
+        if: ${{ steps.release_check.outcome == 'success' }}
+        run: |
+          type -p gh >/dev/null || {
+            sudo apt update
+            sudo apt install -y gh
+          }
+          
+      - name: Generate and Create New Tag (Atomic)
+        if: ${{ steps.release_check.outcome == 'success' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -e
+          
+          BASE_VERSION="v1.5.8"
+          
+          # Get all existing tags
+          EXISTING_TAGS=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[].name' 2>/dev/null || true)
+          
+          # Find highest revision number for this base version
+          MAX_REVISION=0
+          while IFS= read -r tag; do
+            if [[ "$tag" =~ ^$BASE_VERSION-r([0-9]+)$ ]]; then
+              revision="${BASH_REMATCH[1]}"
+              if (( revision > MAX_REVISION )); then
+                MAX_REVISION=$revision
+              fi
+            fi
+          done <<< "$EXISTING_TAGS"
+          
+          NEW_REVISION=$((MAX_REVISION + 1))
+          NEW_TAG="$BASE_VERSION-r$NEW_REVISION"
+          
+          echo "New tag generated: $NEW_TAG"
+          echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
+          
+          # Create tag using GitHub API to avoid conflicts
+          gh api -X POST /repos/$REPO_OWNER/$REPO_NAME/git/refs \
+            -f ref="refs/tags/$NEW_TAG" \
+            -f sha="$GITHUB_SHA" \
+            --silent
+          
+          echo "Tag $NEW_TAG created successfully"
+          
+      - name: Set KSU Version and Release Name
+        if: ${{ steps.release_check.outcome == 'success' }}
+        run: |
+          # Use temporary directories to avoid conflicts
+          if [ "${{ inputs.kernelsu_variant }}" = "Next" ]; then
+            echo "Processing Next variant"
+            git clone --depth 1 https://github.com/KernelSU-Next/KernelSU-Next.git ksu-next-tmp
+            cd ksu-next-tmp
+            KSU_GIT_VERSION=$(git rev-list --count HEAD)
+            KSU_VERSION=$((10000 + KSU_GIT_VERSION + 200))
+            echo "Next version: $KSU_VERSION"
+            cd ..
+            rm -rf ksu-next-tmp
+            echo "RELEASE_NAME=\"GKI Kernel: KernelSU-Next ($KSU_VERSION) & SUSFS v1.5.8\"" >> $GITHUB_ENV
+            
+          elif [ "${{ inputs.kernelsu_variant }}" = "SukiSU" ]; then
+            echo "Processing SukiSU variant"
+            git clone --depth 1 https://github.com/SukiSU-Ultra/SukiSU-Ultra.git suki-tmp
+            cd suki-tmp
+            KSU_GIT_VERSION=$(git rev-list --count HEAD)
+            KSU_VERSION=$((10000 + KSU_GIT_VERSION + 606))
+            echo "SukiSU version: $KSU_VERSION"
+            cd ..
+            rm -rf suki-tmp
+            echo "RELEASE_NAME=\"GKI Kernel: SukiSU ($KSU_VERSION) & SUSFS v1.5.8\"" >> $GITHUB_ENV
+            
+          else
+            echo "Using default naming for variant: ${{ inputs.kernelsu_variant }}"
+            echo "RELEASE_NAME=\"GKI Kernel: ${{ inputs.kernelsu_variant }} & SUSFS v1.5.8\"" >> $GITHUB_ENV
+          fi
+          
       - name: Fetch KSU and SUSFS Commit Info
         id: build_notes
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
-          KSU_BRANCH=""
-          if [[ "${{ inputs.kernelsu_branch }}" == "Dev(开发)" || "${{ inputs.kernelsu_variant }}" == "MKSU" || "${{ inputs.kernelsu_variant }}" == "SukiSU" ]]; then
+          # Handle 'Other' branch selection
+          if [[ "${{ inputs.kernelsu_branch }}" == "Other(其他/指定)" ]]; then
+            echo "Using custom branch selection"
+            if [[ "${{ inputs.kernelsu_variant }}" == "Official" ]]; then
+              KSU_BRANCH="main"
+            elif [[ "${{ inputs.kernelsu_variant }}" == "Next" ]]; then
+              KSU_BRANCH="next"
+            else
+              KSU_BRANCH="main"  # Default for MKSU/SukiSU
+            fi
+          elif [[ "${{ inputs.kernelsu_branch }}" == "Dev(开发)" || "${{ inputs.kernelsu_variant }}" == "MKSU" || "${{ inputs.kernelsu_variant }}" == "SukiSU" ]]; then
             if [[ "${{ inputs.kernelsu_variant }}" == "Official" || "${{ inputs.kernelsu_variant }}" == "MKSU" || "${{ inputs.kernelsu_variant }}" == "SukiSU" ]]; then
               KSU_BRANCH="main"
             elif [[ "${{ inputs.kernelsu_variant }}" == "Next" ]]; then
               KSU_BRANCH="next"
+            fi
+          elif [[ "${{ inputs.kernelsu_branch }}" == "Stable(标准)" && "${{ inputs.kernelsu_variant }}" != "MKSU" ]]; then
+            KSU_REPO_URL=""
+            if [ "${{ inputs.kernelsu_variant }}" == "Official" ]; then
+              KSU_REPO_URL="https://github.com/tiann/KernelSU.git"
+            elif [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
+              KSU_REPO_URL="https://github.com/KernelSU-Next/KernelSU-Next.git"
+            elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
+              KSU_REPO_URL="https://github.com/ShirkNeko/KernelSU.git"
+            fi
+            
+            if [ -n "$KSU_REPO_URL" ]; then
+              TAG=$(git ls-remote --tags --sort=-v:refname "$KSU_REPO_URL" | grep -o 'refs/tags/.*' | cut -d'/' -f3 | head -n1)
+              KSU_BRANCH="${TAG:-UNKNOWN_TAG}"
+            else
+              KSU_BRANCH="main"
             fi
           fi
           
@@ -399,61 +503,12 @@ jobs:
           echo -e "$FINAL_RELEASE_NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           
-      # Install GitHub CLI only (authentication is automatic via GITHUB_TOKEN)
-      - name: Install GitHub CLI
-        if: ${{ steps.release_check.outcome == 'success' }}
-        run: |
-          type -p gh >/dev/null || {
-            curl -sSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-            sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list >/dev/null
-            sudo apt update && sudo apt install gh -y
-          }
-        
-      - name: Generate and Create New Tag
-        if: ${{ steps.release_check.outcome == 'success' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          set -e  # Exit on error
-          
-          # Configure Git user
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          
-          BASE_VERSION="v1.5.8"
-          
-          # Get all existing tags
-          EXISTING_TAGS=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[].name' 2>/dev/null || true)
-          
-          # Find highest revision number for this base version
-          MAX_REVISION=0
-          while IFS= read -r tag; do
-            if [[ "$tag" =~ ^$BASE_VERSION-r([0-9]+)$ ]]; then
-              revision="${BASH_REMATCH[1]}"
-              if (( revision > MAX_REVISION )); then
-                MAX_REVISION=$revision
-              fi
-            fi
-          done <<< "$EXISTING_TAGS"
-          
-          NEW_REVISION=$((MAX_REVISION + 1))
-          NEW_TAG="$BASE_VERSION-r$NEW_REVISION"
-          
-          echo "New tag generated: $NEW_TAG"
-          echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
-          
-          # Create and push tag
-          git tag "$NEW_TAG"
-          git push origin "$NEW_TAG"
-          
       - name: Download Artifacts
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/download-artifact@v4
         with:
-          path: ./downloaded-artifacts
+          path: release-artifacts-${{ github.run_id }}
           
-      # Prepare artifacts for upload
       - name: Prepare Artifacts for Upload
         if: ${{ steps.release_check.outcome == 'success' }}
         run: |
@@ -461,45 +516,19 @@ jobs:
           mkdir -p release-assets
           
           # Find and copy all artifacts to a flat directory structure
-          find ./downloaded-artifacts -type f -exec cp -v {} ./release-assets \;
+          find ./release-artifacts-${{ github.run_id }} -type f -exec cp -v {} ./release-assets \;
+          
+          # Generate checksums
+          cd release-assets
+          sha256sum * > SHA256SUMS.txt
+          cd ..
           
           echo "Artifacts prepared for upload:"
           ls -lh ./release-assets
           
-      - name: Set KSU Version for Final Release Name
-        if: ${{ steps.release_check.outcome == 'success' }}
-        run: |
-          KSU_VERSION_SUFFIX=""
-          
-          if [ "${{ inputs.kernelsu_variant }}" == "Next" ]; then
-            git clone https://github.com/KernelSU-Next/KernelSU-Next.git --depth 1 temp_ksu_repo || true
-            if [ -d "temp_ksu_repo" ]; then
-              cd temp_ksu_repo || exit 1
-              KSU_GIT_VERSION=$(git rev-list --count HEAD)
-              KSU_VERSION_SUFFIX="($((10000 + KSU_GIT_VERSION + 200)))"
-              cd ..
-              rm -rf temp_ksu_repo
-            else
-              echo "Warning: Could not clone KernelSU-Next repository for versioning." >&2
-            fi
-          elif [ "${{ inputs.kernelsu_variant }}" == "SukiSU" ]; then
-            git clone https://github.com/SukiSU-Ultra/SukiSU-Ultra.git --depth 1 temp_ksu_repo || true
-            if [ -d "temp_ksu_repo" ]; then
-              cd temp_ksu_repo || exit 1
-              KSU_GIT_VERSION=$(git rev-list --count HEAD)
-              KSU_VERSION_SUFFIX="($((10000 + KSU_GIT_VERSION + 606)))"
-              cd ..
-              rm -rf temp_ksu_repo
-            else
-              echo "Warning: Could not clone SukiSU-Ultra repository for versioning." >&2
-            fi
-          fi
-          
-          echo "RELEASE_NAME=${{ env.RELEASE_NAME }}${KSU_VERSION_SUFFIX} & SUSFS v1.5.8" >> $GITHUB_ENV
-          
       - name: Create GitHub Release
         if: ${{ steps.release_check.outcome == 'success' }}
-        uses: actions/create-release@v1
+        uses: actions/create-release@v2
         with:
           tag_name: ${{ env.NEW_TAG }}
           prerelease: true
@@ -507,7 +536,7 @@ jobs:
           body: ${{ env.FULL_RELEASE_NOTES }}
           token: ${{ secrets.GITHUB_TOKEN }}
           
-      - name: Dynamically Upload Release Assets
+      - name: Upload Release Assets
         if: ${{ steps.release_check.outcome == 'success' }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
