--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -81,7 +81,7 @@ jobs:
       kernelsu_branch: ${{ inputs.kernelsu_branch }}
       version: ${{ inputs.version }}
       use_zram: ${{ inputs.use_zram }}
-      use_k极m: ${{ inputs.use_kpm }}
+      use_kpm: ${{ inputs.use_kpm }}
 
   build-kernel-a13-5-10:
     if: contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13')
